--- a/public/index.html
+++ b/public/index.html
@@ -4,8 +4,20 @@
         <meta charset="utf-8">
         <title>Chat App</title>
     </head>
-</html>
 
 <body>
-<p>Welcome to the chat app</p>
+  <p>Welcome to the chat app</p>
+  <script src="/socket.io/socket.io.js"></script>
+  <script>
+      var socket = io();
+
+      socket.on('connect', () => {
+          console.log('connected to server');
+      });
+
+      socket.on('disconnect', () => {
+          console.log('disconnect from server');
+      });
+  </script>
 </body>
+</html>
